@@ -18,3 +18,5 @@ showSugarIn3D=Show sugar in 3D
 sodiumChloride=Sodium<br>Chloride
 sucrose=Sucrose
 shortCircuit=Short circuit!
+sodium = Na+
+chloride = Cl-
