@@ -1,10 +1,11 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.sugarandsaltsolutions.macro.view;
+package edu.colorado.phet.sugarandsaltsolutions.micro.view;
 
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.model.property.SettableProperty;
 import edu.colorado.phet.sugarandsaltsolutions.common.view.MinimizedConcentrationBarChart;
+import edu.colorado.phet.sugarandsaltsolutions.macro.view.SodiumChlorideConcentrationBarChart;
 import edu.umd.cs.piccolo.PNode;
 
 /**
@@ -13,11 +14,14 @@ import edu.umd.cs.piccolo.PNode;
  * @author Sam Reid
  */
 public class ExpandableConcentrationBarChartNode extends PNode {
-    public ExpandableConcentrationBarChartNode( final Property<Boolean> showConcentrationBarChart, ObservableProperty<Double> saltConcentration,
-                                                ObservableProperty<Double> sugarConcentration, SettableProperty<Boolean> showConcentrationValues, double scaleFactor ) {
+    public ExpandableConcentrationBarChartNode( final Property<Boolean> showConcentrationBarChart,
+                                                ObservableProperty<Double> sodiumConcentration,
+                                                ObservableProperty<Double> calciumConcentration,
+                                                SettableProperty<Boolean> showConcentrationValues,
+                                                double scaleFactor ) {
 
         //The bar chart itself (when toggled to be visible)
-        addChild( new SugarSaltBarChart( saltConcentration, sugarConcentration, showConcentrationValues, showConcentrationBarChart, scaleFactor ) );
+        addChild( new SodiumChlorideConcentrationBarChart( sodiumConcentration, calciumConcentration, showConcentrationValues, showConcentrationBarChart, scaleFactor ) );
 
         //Panel that says "concentration" and has a "+" button to expand the concentration bar chart
         addChild( new MinimizedConcentrationBarChart( showConcentrationBarChart ) );
